pageshow only fires the first time the back button is pressed https://bugs.webkit.org/show_bug.cgi?id=156356 <rdar://problem/29256489>

Reviewed by Alexey Proskuryakov.

Source/WebCore:

When FrameLoader::commitProvisionalLoad() would restore a page from the back/forward
cache, it would only call FrameLoader::checkCompleted() in the main frame and fail
to do so in subframes. Calling checkCompleted() is important, not only because it
sets m_isComplete to true but also because it calls checkCallImplicitClose(), which
resets m_didCallImplicitClose to true and m_wasUnloadEventEmitted to false.

Because checkCompleted() was not called, FrameLoader::dispatchUnloadEvents() would then
fail to fire the pagehide event because the `m_didCallImplicitClose && !m_wasUnloadEventEmitted`
was not met. Also, even though checkCompleted() was called for the main frame, if there
are subframes, it would just return early because allChildrenAreComplete() returned false.
Later on, when trying to fire the pageshow event, it would fail to because we have logic
in DOMWindow::dispatchEvent() to avoid firing a pageshow event if we did not previously
send a pagehide event.

To address the issue, I now call checkCompleted() in FrameLoader::open() for subframes, as
this gets called for every frame during restoration from the back/forward cache. For the main
frame, we keep calling checkCompleted(), after we've called sendRemainingDelegateMessages().

Test: fast/history/multiple-back-forward-navigations.html

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::open):

LayoutTests:

* fast/history/multiple-back-forward-navigations-expected.txt: Added.
* fast/history/multiple-back-forward-navigations.html: Added.
Add layout test coverage.

* fast/history/resources/page-cache-helper.html:
Update page cache helper to navigate back even if the page is coming out of
the back/forward cache, by listening to the pageshow event.


Canonical link: https://commits.webkit.org/225280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262221 268f45cc-cd09-0410-ab3c-d52691b4dbfc